# phosphor

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config  config.toml
crates/embree-rs/: .gitignore  Cargo.toml  README.md
crates/embree-rs/embree-sys/: .gitignore  Cargo.toml  build.rs  generate_bindings.sh
crates/embree-rs/embree-sys/src/: bindings.rs  lib.rs
crates/embree-rs/examples/: raytracer.rs
crates/embree-rs/examples/common/: mod.rs
crates/embree-rs/src/: common.rs  device.rs  error.rs  geometry.rs  lib.rs  point_geometry.rs  polygon_geometry.rs  ray.rs  scene.rs  user_geometry.rs
crates/scene_import/: Cargo.toml
crates/scene_import/src/: lib.rs
scene_desc/: Cargo.toml
scene_desc/src/: lib.rs  scene.rs
scene_import/: Cargo.toml
scene_import/src/: lib.rs  scene.rs  scene_definition.rs  tungsten_scene.rs
scenes/: chair.json  cornell_box_glossy.json  cornell_box_sphere_light.json  cornell_box_spheres.json
spin/: Cargo.toml
src/: camera.rs  colour.rs  image_buffer.rs  intersectable_list.rs  light.rs  lights.rs  linalg.rs  main.rs  material.rs  material_type.rs  materials.rs  mesh.rs  microfacet.rs  path_integrator.rs  primitive.rs  primitives.rs  render_buffer.rs  render_settings.rs  renderer.rs  samplers.rs  sampling.rs  scene.rs  surface.rs  tonemap.rs  triangle_list.rs  tungsten_scene.rs  tungsten_scene_convert.rs
src/bvh/: bbox.rs  bvh.rs  mod.rs
src/colour/: blackbody.rs  mod.rs  rgb.rs  srgb.rs
src/geometry/: boxes.rs  intersectable_list.rs  intersection.rs  mod.rs  quad.rs  ray.rs  sphere.rs  traits.rs  triangle.rs
src/materials/: brdf.rs  brdfparams.rs  bsdf.rs  diffuse.rs  fresnel.rs  ggx.rs  glossy.rs  lambert.rs  materialparams.rs  microfacet.rs  mod.rs
src/math/: affine_transform.rs  bivector.rs  linalg.rs  mod.rs  prelude.rs  probability.rs  tangent.rs  unit.rs
src/sampling/: mod.rs
src/sequences/: recurrence.rs  rng.rs  sobol.rs
src/uniform_sampling/: quasi_rng.rs  xoroshiro128.rs
