[package]
name = "phosphor"
version = "0.1.0"
authors = ["<locke9@gmail.com>"]
edition = "2018"
description = """
A path tracer written in Rust
"""

[workspace]
members = [
    "scene_import"
]

[dependencies]
glam = { version = "0.11" }
log = "0.4"
fern = "0.5"
rand_core = "0.5"
rand_pcg = "0.2"
png = "0.15"
num-traits = "0.2"
vec_map = "0.8"
rayon = "1"
argh = "0.1"
bytemuck = "1.4.1"

embree = { path = "../embree-rs" }

scene_import = { path = "scene_import" }

# indicatif = "0.13"

# state = "0.4"
# spa = "0.2"

[profile.dev]
opt-level = 2
debug = 1 # Line numbers only

[profile.dev.build-override]
opt-level = 0

# Set the default for dependencies.
# [profile.dev.package."*"]
# opt-level = 2

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
#lto = "thin"

[profile.release.build-override]
opt-level = 0
