[package]
name = "phosphor"
version = "0.1.0"
authors = ["<locke9@gmail.com>"]
edition = "2018"
description = """
A path tracer written in Rust
"""

[workspace]
members = [
    "scene_import"
]

[dependencies]
glam = "0.11.0"
log = "0.4.11"
fern = "0.6.0"
png = "0.16.7"
num-traits = "0.2.14"
vec_map = "0.8.2"
rayon = "1.5.0"
argh = "0.1.4"
bytemuck = "1.4.1"

embree = { path = "../embree-rs" }

scene_import = { path = "scene_import" }

# indicatif = "0.13"

# state = "0.4"
# spa = "0.2"

[profile.dev]
opt-level = 2
debug = 1 # Line numbers only

[profile.dev.build-override]
opt-level = 0

# Set the default for dependencies.
# [profile.dev.package."*"]
# opt-level = 2

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
#lto = "thin"

[profile.release.build-override]
opt-level = 0
